--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,5 +81,9 @@ dependencies {
     implementation 'q.rorbin:VerticalTabLayout:1.2.5'
     //流式布局
     implementation 'com.zhy:flowlayout-lib:1.0.3'
+
+    implementation 'com.zhxh:ximageviewlib:1.2'
+
+    compile 'com.makeramen:roundedimageview:2.2.1'
 }
 
