--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /build
 /captures
 .externalNativeBuild
+app/src/main/res/mipmap-xxhdpi/audio_player_play.png
+app/src/main/res/mipmap-xxhdpi/audio_player_prev.png
