点击跳转二级列表

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,10 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.CommonSeeActivity"
+            android:launchMode="singleTask"
+            android:theme="@style/NoAppTheme" />
     </application>
 
 </manifest>
