--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,14 +45,17 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LrcActivity"
+        <activity
+            android:name=".activity.LrcActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/NoAppTheme"
-            />
+            android:theme="@style/NoAppTheme" />
         <activity
             android:name=".activity.CommonSeeActivity"
             android:launchMode="singleTask"
             android:theme="@style/NoAppTheme" />
+        <activity android:name=".activity.SettingActivity"
+            android:theme="@style/NoAppTheme"
+            />
     </application>
 
 </manifest>
