--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,11 +13,12 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.myergedd"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -86,4 +87,15 @@ dependencies {
     implementation 'com.makeramen:roundedimageview:2.2.1'
     //饺子视频
     implementation 'cn.jzvd:jiaozivideoplayer:6.2.9'
+
+//    implementation 'com.shuyu:GSYVideoPlayer:5.0.0'
+//    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
+    implementation 'com.shuyu:gsyVideoPlayer-java:5.0.1'
+
+//根据你的需求
+    implementation 'com.shuyu:gsyVideoPlayer-armv5:5.0.1'
+    implementation 'com.shuyu:gsyVideoPlayer-armv7a:5.0.1'
+    implementation 'com.shuyu:gsyVideoPlayer-arm64:5.0.1'
+    implementation 'com.shuyu:gsyVideoPlayer-x64:5.0.1'
+    implementation 'com.shuyu:gsyVideoPlayer-x86:5.0.1'
 }
