--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
     <application
+
         android:name=".app.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/icon_launcher"
@@ -53,9 +54,15 @@
             android:name=".activity.CommonSeeActivity"
             android:launchMode="singleTask"
             android:theme="@style/NoAppTheme" />
-        <activity android:name=".activity.SettingActivity"
+        <activity
+            android:name=".activity.SettingActivity"
+            android:theme="@style/NoAppTheme" />
+        <activity android:name=".activity.VideoActivity"
             android:theme="@style/NoAppTheme"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
             />
+
     </application>
 
 </manifest>
