--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.youth.banner:banner:1.4.10'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
@@ -98,4 +98,6 @@ dependencies {
     implementation 'com.shuyu:gsyVideoPlayer-arm64:5.0.1'
     implementation 'com.shuyu:gsyVideoPlayer-x64:5.0.1'
     implementation 'com.shuyu:gsyVideoPlayer-x86:5.0.1'
+    //高斯模糊
+    implementation 'jp.wasabeef:glide-transformations:2.0.1'
 }
