--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.youth.banner:banner:1.4.10'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
+//    implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
@@ -86,4 +86,9 @@ dependencies {
     implementation 'com.makeramen:roundedimageview:2.2.1'
     //饺子视频
     implementation 'cn.jzvd:jiaozivideoplayer:6.2.9'
+
+    //高斯模糊
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    implementation 'jp.wasabeef:glide-transformations:2.0.1'
 }
