--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
     <application
-       android:name=".MyApp"
+        android:name=".app.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/icon_launcher"
         android:label="@string/app_name"
@@ -31,7 +31,7 @@
             android:launchMode="singleTask"
             android:theme="@style/NoAppTheme" />
         <activity
-            android:name=".SearchActivity"
+            android:name=".activity.SearchActivity"
             android:launchMode="singleTop"
             android:theme="@style/NoAppTheme" />
         <activity
@@ -45,19 +45,21 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".activity.LrcActivity"
             android:screenOrientation="portrait"
             android:theme="@style/NoAppTheme" />
+
         <activity
             android:name=".activity.CommonSeeActivity"
             android:launchMode="singleTask"
             android:theme="@style/NoAppTheme" />
         <activity
+
             android:name=".SentingActivity"
             android:theme="@style/NoAppTheme" />
         <activity android:name=".Listen_DetailsActivity" />
         <activity android:name=".DetailsActivity" android:theme="@style/NoAppTheme"></activity>
     </application>
-
 </manifest>
