--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:launchMode="singleTask"
             android:theme="@style/NoAppTheme" />
         <activity
-            android:name=".activity.SearchActivity"
+            android:name=".activity.SearchVideoActivity"
             android:launchMode="singleTop"
             android:theme="@style/NoAppTheme" />
         <activity
