--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -39,7 +43,6 @@ dependencies {
     //greenDAO配置
     implementation 'org.greenrobot:greendao:3.2.2'
     implementation 'org.greenrobot:greendao-generator:3.2.2'
-
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     // 必要依赖，解析json字符所用
@@ -68,7 +71,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     //内存泄漏
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
@@ -81,18 +83,14 @@ dependencies {
     implementation 'q.rorbin:VerticalTabLayout:1.2.5'
     //流式布局
     implementation 'com.zhy:flowlayout-lib:1.0.3'
-
     implementation 'com.zhxh:ximageviewlib:1.2'
-
     implementation 'com.makeramen:roundedimageview:2.2.1'
     //饺子视频
     implementation 'cn.jzvd:jiaozivideoplayer:6.2.9'
-
-//    implementation 'com.shuyu:GSYVideoPlayer:5.0.0'
-//    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
+    //    implementation 'com.shuyu:GSYVideoPlayer:5.0.0'
+    //    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
     implementation 'com.shuyu:gsyVideoPlayer-java:5.0.1'
-
-//根据你的需求
+    //根据你的需求
     implementation 'com.shuyu:gsyVideoPlayer-armv5:5.0.1'
     implementation 'com.shuyu:gsyVideoPlayer-armv7a:5.0.1'
     implementation 'com.shuyu:gsyVideoPlayer-arm64:5.0.1'
@@ -100,4 +98,5 @@ dependencies {
     implementation 'com.shuyu:gsyVideoPlayer-x86:5.0.1'
     //高斯模糊
     implementation 'jp.wasabeef:glide-transformations:2.0.1'
+    implementation files('libs/SaaS_AppAnalytics_Android_SDK_V4.0.9.jar')
 }
